--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,13 @@ authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+altair = "^5.0.1"
+polars = "^0.18.5"
+pyarrow = "^12.0.1"
+camminapy = "^1.1.0"
+vl-convert-python = "^0.11.1"
+nbclient = "^0.8.0"
+nbformat = "^5.9.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
