--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,7 @@ format:
       dark: darkly
     page-layout: full
     code-fold: true
+    code-overflow: wrap
     toc: true
     toc-expand: 10
     toc-depth: 10
