--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ camminapy = "^1.1.0"
 vl-convert-python = "^0.11.1"
 nbclient = "^0.8.0"
 nbformat = "^5.9.0"
+rich = "^13.4.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
