--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 
 
 book:
-  title: "dicopal"
+  title: "A collection of colors"
   author: "Thomas Camminady"
   date: "7/6/2023"
   chapters:
