--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10,<3.12"
 altair = "^5.0.1"
 polars = "^0.18.5"
 pyarrow = "^12.0.1"
@@ -14,6 +14,9 @@ vl-convert-python = "^0.11.1"
 nbclient = "^0.8.0"
 nbformat = "^5.9.0"
 rich = "^13.4.2"
+matplotlib = "^3.7.2"
+numpy = "^1.25.0"
+daltonize = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
