--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rich = "^13.4.2"
 matplotlib = "^3.7.2"
 numpy = "^1.25.0"
 daltonize = "^0.2.0"
+vega-datasets = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
