--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,13 +35,14 @@ book:
 format:
   html:
     theme:
-      # light: flatly
-      # dark: darkly
-      - cosmo
-      - custom.scss
+      light: [flatly,custom.scss]
+      dark: [darkly,custom.scss]
+
     page-layout: full
     code-fold: true
     code-copy: true
+    highlight-style: github
+
     code-line-numbers: false
     code-overflow: scroll
     toc: false
