--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,6 +34,7 @@ book:
 
 format:
   html:
+    anchor-sections: true
     theme:
       light: [flatly,custom.scss]
       dark: [darkly,custom.scss]
